2013-12-16  Dániel Bátyai  <Batyai.Daniel@stud.u-szeged.hu>

        PrettyPatch.rb doesn't handle diffs where lines matching /^--/ are missing properly
        https://bugs.webkit.org/show_bug.cgi?id=54928

        Reviewed by Adam Roben.

        PrettyPatch will now check if the next line after /^--- / matches /^+++ /, and if not,
        then it's just a normal line

        * PrettyPatch/PrettyPatch.rb:

2013-08-16  David Farler  <dfarler@apple.com>

        PrettyPatch: Wrap pre blocks
        https://bugs.webkit.org/show_bug.cgi?id=119906

        Reviewed by Darin Adler.

        * PrettyPatch/PrettyPatch.rb:
        <pre> will use the same wrap settings as the text class:
        white-space: pre-wrap and word-wrap: break-word.

2013-07-16  James Craig  <james@cookiecrook.com>

        AX: Add a 'choose product' link for the new-ax-bug alias.
        https://bugs.webkit.org/show_bug.cgi?id=118697

        Reviewed by Chris Fleizach.

        * template/en/custom/global/choose-product.html.tmpl: Added new link for accessibility bugs.

2013-07-09  Martin Robinson  <mrobinson@igalia.com>

        PrettyPatch doesn't handle UTF-8 characters correctly
        https://bugs.webkit.org/show_bug.cgi?id=45760

        Reviewed by Adam Roben.

        * PrettyPatch/PrettyPatch.rb: Since the diff lines are typically in UTF-8 and the results
        of PrettyPatch may be served by a web server or not (for instance when accessed via
        webkit-patch pretty-diff), we should use a meta tag to force the page encoding to UTF-8.

2013-05-23  Patrick Gansterer  <paroga@webkit.org>

        EWS bubbles need more space
        https://bugs.webkit.org/show_bug.cgi?id=116675

        Reviewed by Andreas Kling.

        * template/en/custom/attachment/list.html.tmpl:

2013-04-16  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix after r148527.

        * committers-autocomplete.js:
        (WebKitCommitters):

2013-04-16  Ryosuke Niwa  <rniwa@webkit.org>
