@@ -1,3 +1,12 @@
+2014-02-25  Jozsef Berta  <jberta.u-szeged@partner.samsung.com>
+
+        PrettyPatch.rb should be more descriptive for "git diff -M" styled patches
+        https://bugs.webkit.org/show_bug.cgi?id=125514
+
+        Reviewed by Csaba Osztrogonác.
+
+        * PrettyPatch/PrettyPatch.rb: PrettyPatch.rb is modified to show which file was renamed or moved.
+
 2013-12-16  Dániel Bátyai  <Batyai.Daniel@stud.u-szeged.hu>
 
         PrettyPatch.rb doesn't handle diffs where lines matching /^--/ are missing properly
